--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,7 @@
 /* Selecionando Variaveis */
 :root {
   --text-color: white;
-  --bg-url: url(../assets/bg-mobile.jpg);
+  --bg-url: url(../assets/bg-mobile-dark.jpg);
   --stroke-color: rgba(255, 255, 255, 0.5) solid;
   --surface-color: rgba(255, 255, 255, 0.1);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
@@ -35,6 +35,7 @@ img {
 /* Modelo simplificado de imagem de Fundo */
 body {
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100%;
 }
 
 /* Body Universal */
@@ -45,7 +46,8 @@ body * {
 
 /* Elemento "Container" */
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
@@ -78,8 +80,7 @@ body * {
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.4s forwards;
 }
 
 #switch button {
@@ -95,6 +96,8 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+
+  animation: slide-back 0.2s forwards;
 }
 
 #switch span {
@@ -106,6 +109,10 @@ body * {
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border-radius: 9999px;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 /* Botões - Links */
@@ -168,4 +175,34 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+
+/* Media Queries  */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(../assets/bg-desktop-dark.jpg);
+  }
+
+  .light {
+    --bg-url: url(../assets/bg-desktop-light.jpg);
+  }
+}
+
+/* Animações Do Toggle */
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
+  }
 }
